--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="zolostays.zolo" >
+    package="zolostays.zolo">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:allowBackup="true"
@@ -8,6 +11,7 @@
         android:label="@string/app_name"
         android:name=".ZoloLoginMainApplication"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".Modules.Login.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"
